# ena-portal-ptarmigan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml
src/: main.py
src/ptarmigan/: app_state.py  config.py  data_state.py  pandas_table.py
tests/: test_cache.py
